fixed a bug in which Progress was not evaluating correctly due to double precision issue. .29 was treated as .28989999 so long value was 28. Fixed it by using Math.ceil